[package]
name = "aoc-ornaments"
version = "0.1.9"
edition = "2024"
rust-version = "1.85"

[features]
default = ["miette"]

[dependencies]
derive_more = { version = "1", features = ["full"] }
glam = "0.29"
miette = { version = "7.4.0", optional = true }
nom = "7.0"
thiserror = "2.0"

[dev-dependencies]
rstest = "0.24.0"