[package]
name = "aoc-ornaments"
description = "Advent of Code tools"
version = "0.1.10"
edition = "2024"
rust-version = "1.85"
authors = ["Alyssa Evans <alyda@me.com>"]
repository = "https://github.com/alycda/AoC-Ornaments"
exclude = ["src/bin/*", "examples/*"]
license = "GPL-3.0"

[features]
default = ["miette"]

[dependencies]
the_algorithms_rust = { git = "https://github.com/TheAlgorithms/Rust", branch = "master" }
derive_more = { version = "1", features = ["full"] }
glam = "0.29"
itertools = "0.14"
thiserror = "2.0"
md5 = "0.7"
miette = { version = "7.4", optional = true, features = ["fancy"]}
nom = "7.0"
rand = "0.8"
serde_json = "1.0"

[dev-dependencies]
rstest = "0.24"
